refactor starting with express/server

--- a/client/index.html
+++ b/client/index.html
@@ -4,32 +4,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Medical Records Tracker</title>
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="">
 </head>
-<body ng-app="MedicalRecordsTrackerApp">
-
-<!-- Injection point of partials -->
-  <div ng-view></div>
-
-<!-- Third party libraries -->
-  <script src="lib/bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="lib/bower_components/angular/angular.min.js"></script>
-  <script src="/lib/bower_components/angular-route/angular-route.min.js"></script>
-
-<!-- Application scripts -->
-  <script src="client/app/main.js"></script>
-
-<!-- Factories ????-->
-
-<!-- Controllers -->
-  <script src="/client/app/controllers/main.js"></script>
-  <script src="/client/app/controllers/login.js"></script>
-  <script src="/client/app/controllers/register.js"></script>
-  <script src="/client/app/controllers/welcome.js"></script>
-  <script src="/client/app/controllers/newVisit.js"></script>
-  <script src="/client/app/controllers/previousVisit.js"></script>
-  <script src="/client/app/controllers/individualVisit.js"></script>
-  <script src="/client/app/controllers/navbar.js"></script>
-
+<body>
+  <h1>Welcome to Medical Records Tracker</h1>
 </body>
 </html>
