--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="">
 </head>
 <body>
-  <h1>Welcome to Medical Records Tracker</h1>
+      <div ng-app="medicalRecordsTracker">
+      <div ng-controller="main">
+        <h1>{{title}}</h1>
+      </div>
+    </div>
+    <script src="/lib/bower_components/angular/angular.min.js"></script>
+    <script src="/app/main.js"></script>
 </body>
 </html>
