--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,13 @@
   <title>Medical Records Tracker</title>
   <link rel="stylesheet" href="">
 </head>
-<body>
-  <h1>Welcome to Medical Records Tracker</h1>
-</body>
+  <body>
+    <div ng-app="medicalRecordsTracker">
+      <div ng-controller="main">
+        <h1>{{title}}</h1>
+      </div>
+    </div>
+    <script src="/lib/angular/angular.min.js"></script>
+    <script src="/app/main.js"></script>
+  </body>
 </html>
