--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
         <h1>{{title}}</h1>
       </div>
     </div>
-    <script src="/lib/angular/angular.min.js"></script>
+    <script src="/lib/bower_components/angular/angular.min.js"></script>
     <script src="/app/main.js"></script>
   </body>
 </html>
