--- a/client/index.html
+++ b/client/index.html
@@ -4,12 +4,14 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Medical Records Tracker</title>
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
 </head>
   <body>
     <div ng-app="medicalRecordsTracker">
-      <div ng-controller="main">
-        <h1>{{title}}</h1>
+      <div class="container">
+        <div ng-controller="main">
+          <h1>{{title}}</h1>
+        </div>
       </div>
     </div>
     <script src="/lib/bower_components/angular/angular.min.js"></script>
