--- a/client/index.html
+++ b/client/index.html
@@ -9,12 +9,11 @@
   <body>
     <div ng-app="medicalRecordsTracker">
       <div class="container">
-        <div ng-controller="main">
-          <h1>{{title}}</h1>
-        </div>
+        <div ng-view></div>
       </div>
     </div>
-    <script src="/lib/bower_components/angular/angular.min.js"></script>
+    <script src="/lib/angular/angular.min.js"></script>
+    <script src="/lib/angular-route/angular-route.min.js"></script>
     <script src="/app/main.js"></script>
   </body>
 </html>
