--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Medical Records Tracker</title>
+  <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
 </head>
   <body>
