--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
 </head>
-  <body>
+  <body class="body">
     <div ng-app="medicalRecordsTracker">
       <div class="container">
         <div ng-view></div>
